volexc/tests/ui/check_union_index_zero.vol
// Variant index 0 is reserved in union
union Foo {
    Bar(u32) = 0;
}
